--- a/client/src/styles/pages/category.sass
+++ b/client/src/styles/pages/category.sass
@@ -3,7 +3,7 @@
 
 .category-page
   background-color: $light-blush
-  
+
   .menu-category
     padding: 3rem 2rem
     display: flex
@@ -28,10 +28,11 @@
     &__dishes
       display: flex
       align-items: center
+      justify-content: center
       flex-wrap: wrap
       gap: 2rem
       width: 100%
       margin-top: 2rem
-    
+
       +respond-to(tablet)
         flex-direction: column
